# boost.dispatch

./: .gitmodules  .travis.yml  CMakeLists.txt  CTestConfig.cmake  README.md  annotated.html  apply__sign_8hpp.html  apply__sign_8hpp.js  appveyor.yml  arithmetic_8hpp.html  as_8hpp.html  as__floating_8hpp.html  as__integer_8hpp.html  as__signed_8hpp.html  as__unsigned_8hpp.html  auto__decltype_8hpp.html  base_8hpp.html  behave__as_8hpp.html  bool_8hpp.html  boost_2array_8hpp.html  changelog.html  classes.html  common_2pointer_8hpp.html  config_8hpp.html  cpu_8hpp.html  default__site_8hpp.html  default__site_8hpp.js  detail_2factory__of_8hpp.html  detail_2hierarchy__of_8hpp.html  detail_2model__of_8hpp.html  detail_2primitive__of_8hpp.html  detail_2property__of_8hpp.html  detail_2scalar__of_8hpp.html  detail_2value__of_8hpp.html  dir_227e97e64164a3341279337fe13a774e.html  dir_227e97e64164a3341279337fe13a774e.js  dir_25e5e8d2291ef1d651140600c8870620.html  dir_25e5e8d2291ef1d651140600c8870620.js  dir_3209db4464bf21049b87478618601354.html  dir_3209db4464bf21049b87478618601354.js  (+284 more)
cmake/: add_target_parent.cmake  compilers.cmake  coverage.cmake  doc.cmake  make_coverage.cmake  make_unit.cmake  ns.cmake  ns.cmake.install.cmake  parse_revision.cmake  register_dependency.cmake
cmake/ns/: make_coverage.cmake  make_unit.cmake  ns.cmake  parse_revision.cmake
cmake/projects/: brigand.cmake  brigand.standalone.cmake  stf.cmake  stf.standalone.cmake
doc/: CMakeLists.txt  Doxyfile.in  Jamfile.v2  main.md  rationale.cpp
include/boost/: dispatch.hpp
include/boost/dispatch/: as.hpp  config.hpp  function.hpp  hierarchy.hpp  hierarchy_of.hpp  meta.hpp  models.hpp  property_of.hpp
include/boost/dispatch/adapted/boost/: array.hpp  fusion.hpp
include/boost/dispatch/adapted/common/: pointer.hpp
include/boost/dispatch/adapted/hierarchy/: array.hpp  integral_constant.hpp  pointer.hpp  tuple.hpp
include/boost/dispatch/adapted/std/: array.hpp  integral_constant.hpp  tuple.hpp
include/boost/dispatch/detail/: brigand.hpp  declval.hpp  factory_of.hpp  hierarchy_of.hpp  is_iterator.hpp  is_pointer.hpp  model_of.hpp  primitive_of.hpp  property_of.hpp  scalar_of.hpp  updowngrade.hpp  value_of.hpp
include/boost/dispatch/details/: type_traits.hpp
include/boost/dispatch/function/: functor.hpp  make_callable.hpp  overload.hpp  register_namespace.hpp
include/boost/dispatch/hierarchy/: arithmetic.hpp  array.hpp  base.hpp  bool.hpp  cpu.hpp  default_site.hpp  exactly.hpp  floating.hpp  formal.hpp  functions.hpp  fundamental.hpp  generic.hpp  ieee_types.hpp  integer.hpp  integer_types.hpp  scalar.hpp  signed_types.hpp  sized_types.hpp  unspecified.hpp  void.hpp
include/boost/dispatch/meta/: apply_sign.hpp  as_floating.hpp  as_integer.hpp  as_signed.hpp  as_unsigned.hpp  behave_as.hpp  downgrade.hpp  enable_if_type.hpp  factory_of.hpp  generation.hpp  introspection.hpp  is_homogeneous.hpp  is_natural.hpp  make_floating.hpp  make_integer.hpp  model_of.hpp  parent_of.hpp  primitive_of.hpp  scalar_of.hpp  sign_of.hpp  transfer_qualifiers.hpp  upgrade.hpp  value_of.hpp
include/boost/dispatch/meta/detail/: factory_of.hpp  model_of.hpp  primitive_of.hpp  updowngrade.hpp  value_of.hpp
include/boost/dispatch/meta/details/: model_of.hpp  primitive_of.hpp  value_of.hpp
include/boost/dispatch/meta/generation/: apply_sign.hpp  as_floating.hpp  as_integer.hpp  as_signed.hpp  as_unsigned.hpp  downgrade.hpp  make_floating.hpp  make_integer.hpp  transfer_qualifiers.hpp  upgrade.hpp
include/boost/dispatch/meta/introspection/: behave_as.hpp  factory_of.hpp  is_homogeneous.hpp  is_natural.hpp  model_of.hpp  primitive_of.hpp  scalar_of.hpp  sign_of.hpp  value_of.hpp
include/boost/dispatch/meta/introspection/detail/: factory_of.hpp  model_of.hpp  primitive_of.hpp  scalar_of.hpp  value_of.hpp
meta/: libraries.json
script/travis/: install_boost.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_6.js  classes_7.js  classes_c.js  classes_e.js  classes_f.js  files_10.js  files_5.js  files_6.js  files_9.js  files_b.js  files_d.js  files_e.js  files_f.js  functions_1.js  groups_1.js  groups_3.js  groups_5.js  namespaces_0.js  searchdata.js  typedefs_0.js  (+8 more)
test/: CMakeLists.txt  Jamfile.v2  dispatch_test.hpp  nstest.hpp  stf.hpp
test/adapted/: CMakeLists.txt  boost_array.cpp  boost_fusion.cpp  iterator.cpp  parent.cpp  pointer.cpp  std_array.cpp  std_integral_constant.cpp  std_tuple.cpp
test/api/: CMakeLists.txt  as.cpp  dispatch.cpp
test/hierarchy/: CMakeLists.txt  hierarchy_of.cpp  models.cpp  parent.cpp  property_of.cpp
test/meta/: CMakeLists.txt  apply_sign.cpp  as_floating.cpp  as_integer.cpp  as_signed.cpp  as_unsigned.cpp  behave_as.cpp  downgrade.cpp  factory_of.cpp  is_homogeneous.cpp  is_natural.cpp  make_floating.cpp  make_integer.cpp  model_of.cpp  parent_of.cpp  pointer_rank.cpp  primitive_of.cpp  remove_pointers.cpp  scalar_of.cpp  sign_of.cpp  transfer_qualifiers.cpp  upgrade.cpp  value_of.cpp
test/moc/: tutu.hpp
test/moc/arch/default/: foo.hpp
test/moc/arch/toto/: foo.hpp
test/moc/arch/tutu/: foo.hpp
test/moc/tutu/: foo.hpp
