##===================================================================================================
##                              Copyright 2016   NumScale SAS
##
##                   Distributed under the Boost Software License, Version 1.0.
##                        See accompanying file LICENSE.txt or copy at
##                            http://www.boost.org/LICENSE_1_0.txt
##===================================================================================================

NS_include(make_unit)
NS_include(make_coverage)
add_subdirectory(adapted)
add_subdirectory(api)
add_subdirectory(hierarchy)
add_subdirectory(meta)
